added c support for dict

--- a/include/Makefile
+++ b/include/Makefile
@@ -1,8 +1,11 @@
 CC=clang
 CFLAGS=-g # -fsanitize=address,undefined -g
-all: list.ll shared.ll str.ll io.ll
+all: list.ll shared.ll str.ll io.ll dict.ll
 list.ll: list.c | out
 	$(CC) $(CFLAGS) list.c -S -emit-llvm -o out/list.ll
+
+dict.ll: dict.c | out
+	$(CC) $(CFLAGS) dict.c -S -emit-llvm -o out/dict.ll
 
 shared.ll: shared.c | out
 	$(CC) $(CFLAGS) shared.c -S -emit-llvm -o out/shared.ll
